[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "peaktrace"
version = "0.0.1"
authors = [{ name = "Christoph Dörrer" }]
description = "read trace files for lin and can from peak system"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/d-chris/peaktrace"
"Bug Tracker" = "https://github.com/d-chris/pathutil/peaktrace"

# [tool.pytest.ini_options]
# minversion = "6.0"
# pythonpath = "src"
# testpaths = "test"
# addopts = "--random-order -v"
# addopts = "--cov=src --cov-report=html:test/report"
