[tool.poetry]
name = "peaktrace"
version = "0.0.0"
description = "read peak-system can and lin trace files"
authors = ["Christoph Dörrer <d-chris@web.de>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">3.8.1,<3.13"
pathlibutil = "^0.1.5"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/legacy/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
