[tool.poetry]
name = "peaktrace"
version = "0.0.0"
description = "read peak-system can and lin trace files"
authors = ["Christoph Dörrer <d-chris@web.de>"]
readme = "README.md"
license = "MIT"
include = ["peaktrace/bin/*"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pathlibutil = "^0.1.5"
pandas = { extras = ["performance", "pyarrow", "plot"], version = "^2.2.1" }


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/legacy/"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[tool.poetry.group.jupyter.dependencies]
notebook = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = "tests"
addopts = [
    "--color=yes",
    "-s",
    # "--random-order",
    # "--cov=peaktrace",
    # "--cov-report=term-missing:skip-covered",
    # "--cov-append",
    # "--cov-report=html",
]
